# igorCPPCourse

./: .gitignore
homeworks/homework_2/fortune_teller/: fortune_teller.cpp
homeworks/homework_3/guessing_game/: guessing_game.cpp
homeworks/homework_4/no_strings_attached/: CMakeLists.txt
homeworks/homework_4/no_strings_attached/cmake/: UpdateSubmodules.cmake
homeworks/homework_4/no_strings_attached/examples/: CMakeLists.txt  split_strings.cpp  trim_strings.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/: CMakeLists.txt  split_string.cpp  split_string_test.cpp  string_split.h  string_trim.cpp  string_trim.h  string_trim_test.cpp
homeworks/homework_4/no_strings_attached/no_strings_attached/inc/: split_string.h  string_trim.h
